--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: system 
 description: Invoke operating system commands. Exposes `system()` on macOS &
   Linux. Uses `dart:ffi`.
-version: 0.1.0
+version: 0.2.0
 author: miksen.dk
-homepage: http://miksen.dk
+homepage: https://github.com/miksen/system
 
 environment:
-  sdk: '>=2.5.0 <3.0.0'
+  sdk: '>=2.6.0 <3.0.0'
 
 dependencies:
-  ffi: ^0.1.1
+  ffi: ^0.1.3
 
 dev_dependencies:
   pedantic: ^1.7.0
