--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,41 +1,44 @@
-name: Dart
+name: Dart CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
 
 jobs:
-  build:
+  analyze:
     runs-on: ubuntu-latest
 
-    # Note that this workflow uses the latest stable version of the Dart SDK.
-    # Docker images for other release channels - like dev and beta - are also
-    # available. See https://hub.docker.com/r/google/dart/ for the available
-    # images.
     container:
-      image:  google/dart:latest
+      image: google/dart:latest
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Print Dart SDK version
+      - name: Report version
         run: dart --version
-
       - name: Install dependencies
         run: dart pub get
-
-      # Uncomment this step to verify the use of 'dart format' on each commit.
-      # - name: Verify formatting
-      #   run: dart format --output=none --set-exit-if-changed .
-
-      # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
+      - name: Check formatting
+        run: dart format --output=none --set-exit-if-changed .
+      - name: Analyze code
         run: dart analyze
 
-      # Your project will need to have tests in test/ and a dependency on
-      # package:test for this step to succeed. Note that Flutter projects will
-      # want to change this to 'flutter test'.
+  test:
+    needs: analyze
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        channel: [stable, beta, dev]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: mit-mit/setup-dart@v1
+        with:
+          channel: ${{ matrix.channel }}
+      - name: Report version
+        run: dart --version
+      - name: Install dependencies
+        run: dart pub get
       - name: Run tests
         run: dart test
