--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: system 
 description: Invoke operating system commands. Exposes `system()` on macOS &
   Linux. Uses `dart:ffi`.
-version: 0.3.0
+version: 0.4.0
 author: miksen.dk
 homepage: https://github.com/miksen/system
 
 environment:
-  sdk: '>=2.12.0-133.7.beta <3.0.0'
+  sdk: '>=2.12.0-259.12.beta <3.0.0'
 
 dependencies:
-  ffi: ^0.2.0-nullsafety
+  ffi: ^1.0.0
 
 dev_dependencies:
-  pedantic: ^1.10.0-nullsafety
-  test: ^1.16.0-nullsafety
+  pedantic: ^1.10.0
+  test: ^1.16.0
