--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,13 @@
 name: system 
 description: Invoke operating system commands. Exposes `system()` on macOS &
   Linux. Uses `dart:ffi`.
-version: 0.4.1
+version: 1.0.0
 homepage: https://github.com/miksen/system
+
+# Declare that this package only works on Linux and macOS.
+platforms:
+  linux:
+  macos:
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -11,5 +16,5 @@ dependencies:
   ffi: ^1.0.0
 
 dev_dependencies:
-  pedantic: ^1.10.0
+  lints: ^1.0.0
   test: ^1.16.0
